test/files/neg/t7523-deprecation.scala
trait Foo { def foo }
abstract class Bar { def bar }
